@@ -1,3 +1,8 @@
+2009-02-28  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_log_http.erl: Add support to run in several vhosts
+	* README.txt: Explain that it requires recent ejabberd SVN
+
 2008-09-30  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_log_http.erl: Update record definitions to ejabberd
